# pylogpipe

./: .gitignore  pylogpipe.conf  pylogpipe.py  setup.cfg  setup.py
pylogpipe/: __init__.py
