[metadata]
name = pylogpipe
version = attr: pylogpipe.VERSION
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3
test_suite = tests

[options]
packages =
    pylogpipe

[options.entry_points]
console_scripts =
    pylogpipe = pylogpipe:main

